--- a/src/Todo
+++ b/src/Todo
@@ -8,3 +8,6 @@ what now ?
 (detect passed signature with SIGGPG, ask for new one .)
 
 - add install option
+
+--------------------------------------------------------
+fix shell syntax with http://www.shellcheck.net/
