--- a/src/Changelog
+++ b/src/Changelog
@@ -1,10 +1,14 @@
-* Wed Nov 22 2013 <gerbier@users.sourceforge.net> 2.11
+* Sun Sep 10 2017 <gerbier@users.sourceforge.net> 2.11-2
+- fix bad day of week in changelog (rpmbuild warning)
+- add dependency to rpm-build package instead rpmbuild binary
+
+* Fri Nov 22 2013 <gerbier@users.sourceforge.net> 2.11
 - add install option
 
 * Sun Aug 11 2013 <gerbier@users.sourceforge.net> 2.10-2
 - bugfix from 2.10 on test install : test was inverted (applied on rpm files instead installed rpm)
 
-* Tue Aug 01 2013 <valery_reznic@users.sourceforge.net> 2.10
+* Thu Aug 01 2013 <valery_reznic@users.sourceforge.net> 2.10
 - add tag DISTTAG (feature request)
 - do not test install if work on rpm files
 - applied patch from Olivier Bourdon for pretrans and postrans
@@ -12,12 +16,12 @@
 * Sun Jan 13 2013 <valery_reznic@users.sourceforge.net> 2.9
 - fix to work with rpm 4.10 (Fedora 18) - error: incorrect format: invalid field width
 
-* Thu Jul 11 2012 <gerbier@users.sourceforge.net> 2.8
+* Wed Jul 11 2012 <gerbier@users.sourceforge.net> 2.8
 - can handle SUGGESTS/ENHANCES rpm tag
 - add --cap-from-fs/cap-from-db options
 - build rpmrebuild-version.tar.gz to allow rpmbuild -tb work
 
-* Thu Jun 06 2012 <gerbier@users.sourceforge.net> 2.7
+* Wed Jun 06 2012 <gerbier@users.sourceforge.net> 2.7
 - patch from Andreas Kainz for package file checking
 - add new unset_tag plugin
 - add support for rpm version 5 (mandriva)
@@ -42,10 +46,10 @@
 * Fri Dec 11 2009 <gerbier@users.sourceforge.net> 2.4
 - add -l / --list-plugin option
 
-* Tue Nov 12 2009 <valery_reznic@users.sourceforge.net>
+* Thu Nov 12 2009 <valery_reznic@users.sourceforge.net>
 - add -5 / --md5-compat-digest option
 
-* Wed Jan 09 2009 <gerbier@users.sourceforge.net> 2.3
+* Fri Jan 09 2009 <gerbier@users.sourceforge.net> 2.3
 - release version 2.3
 
 * Tue Dec 16 2008 <valery_reznic@users.sourceforge.net>
@@ -54,7 +58,7 @@
 * Tue Dec 16 2008 <valery_reznic@users.sourceforge.net>
 - fix for rpm 4.6 (fedora 10), that ignore BuildRoot in the spec file flag
 
-* Wed Dec 05 2008 <gerbier@users.sourceforge.net> 
+* Fri Dec 05 2008 <gerbier@users.sourceforge.net>
 - do not use popt any more
 
 * Wed Aug 06 2008 <gerbier@users.sourceforge.net> 2.2.3-1
@@ -126,18 +130,18 @@
 * Sun Nov 14 2004 <valery_reznic@users.sourceforge.net> 2.0.0-1
 - rpmrebuild_parser.src - added '--help-plugins' option
 
-* Wed Oct 26 2004 <valery_reznic@users.sourceforge.net> 2.0.0-1
+* Tue Oct 26 2004 <valery_reznic@users.sourceforge.net> 2.0.0-1
 - processing of /change/modify/edit was moved to the processng_func.src
 - changes to support --change-spec-* ane --edit-* (in the processing_func, rpmrebuild_popt and rpmrebuild_parser)
 - added '--include' option
 
-* Wed Sep 28 2004 <valery_reznic@users.sourceforge.net> 2.0.0-1
+* Tue Sep 28 2004 <valery_reznic@users.sourceforge.net> 2.0.0-1
 - changed all env variables' names to be prefixed with RPMREBUILD_
 
-* Tue Sep 27 2004 <valery_reznic@users.sourceforge.net> 2.0.0-1
+* Mon Sep 27 2004 <valery_reznic@users.sourceforge.net> 2.0.0-1
 - change different variables values from empty/non-empty to yes/no
 
-* Tue Sep 20 2004 <valery_reznic@users.sourceforge.net> 2.0.0-1
+* Mon Sep 20 2004 <valery_reznic@users.sourceforge.net> 2.0.0-1
 - Added support for arbitrary execution order for change/edit/modify
 
 * Sun Sep 19 2004 <valery_reznic@users.sourceforge.net> 2.0.0-1
@@ -220,39 +224,39 @@
 * Fri Jan 17 2003 <gerbier@users.sourceforge.net> 1.4.0-1
 - public release of 1.3 dev branch
 
-* Mon Dec 29 2002 <valery_reznic@users.sourceforge.net> 1.3-1
+* Sun Dec 29 2002 <valery_reznic@users.sourceforge.net> 1.3-1
 - add '-p' option. Now is possible rebuild not only installed rpm, but rpm file too. May be usefull with '-e' or '--filter' option
 
-* Mon Dec 18 2002 <valery_reznic@users.sourceforge.net> 1.3-1
+* Wed Dec 18 2002 <valery_reznic@users.sourceforge.net> 1.3-1
 - more simple and robust filter
 
 * Thu Dec 12 2002 <gerbier@users.sourceforge.net> 1.3.1
 - add filter option for "pluggins"
 - rewrite --resolv-dep as pluggin
 
-* Mon Dec 10 2002 <valery_reznic@users.sourceforge.net> 1.3-0
+* Tue Dec 10 2002 <valery_reznic@users.sourceforge.net> 1.3-0
 - change long options name to be more consistant
 - added support for %%lang
 
-* Mon Dec 10 2002 <gerbier@users.sourceforge.net> 1.3.0
+* Tue Dec 10 2002 <gerbier@users.sourceforge.net> 1.3.0
 - add man page
 - fix bug with % in changelog
 - add -r|--resolv-dep option
 - add french translation in specfile
 
-* Sat Dec  3 2002 <valery_reznic@users.sourceforge.net> 1.3.0
+* Tue Dec  3 2002 <valery_reznic@users.sourceforge.net> 1.3.0
 - added long options
 
-* Sat Dec  2 2002 <valery_reznic@users.sourceforge.net> 1.2-0
+* Mon Dec  2 2002 <valery_reznic@users.sourceforge.net> 1.2-0
 - now rpmrebuild can be run as 'rpm --rpmrebuild'
 
-* Sat Nov 24 2002 <valery_reznic@users.sourceforge.net> 1.1-1
+* Sun Nov 24 2002 <valery_reznic@users.sourceforge.net> 1.1-1
 - filter "(none)" answer from rpm the scripts queries
 
 * Sat Nov 23 2002 <gerbier@users.sourceforge.net> 1.1-0
 - filter "(none)" answer from rpm queries
 
-* Thu Oct 22 2002 <gerbier@users.sourceforge.net> 1.0-0
+* Tue Oct 22 2002 <gerbier@users.sourceforge.net> 1.0-0
 - replace vi by %%define
 - add command lines options (-h : help, -v : verbose, -V: version)
 - add lsm description
@@ -287,18 +291,18 @@
 - add triggers (thanks to Han Holl <han.holl@prismant.nl>
 - add many other spec tags (icon, exlude*, serial, provides, conflicts ...)
 
-* Sun Sep 20 2002  <gerbier@users.sourceforge.net> 0.5.0
+* Fri Sep 20 2002  <gerbier@users.sourceforge.net> 0.5.0
 - try to have it work on any distribution
 - the rpm package is now signed with my gpg key
 
-* Mon Sep 17 2002  <gerbier@users.sourceforge.net> 0.4.2
+* Tue Sep 17 2002  <gerbier@users.sourceforge.net> 0.4.2
 - add architecture support (thanks to Han Holl <han.holl@prismant.nl>)
 - add add require, obsolete tags
 - force time format with LC_TIME to POSIX
 - change shell name to match project name
 - full english messages
 
-* Mon Sep 17 2002  <gerbier@users.sourceforge.net> 0.4.1
+* Tue Sep 17 2002  <gerbier@users.sourceforge.net> 0.4.1
 - suppress useless exit
 - shell cosmetic changes
 
