Made minor grammatical fixes to English language translations.

--- a/src/locale/en/rpmrebuild.lang
+++ b/src/locale/en/rpmrebuild.lang
@@ -18,8 +18,8 @@ NotAnRpm='is not an rpm file'
 NotCompatibleOption='Not compatible options'
 PackageArgumentMissing='package argument missing'
 PackageMultiple='multiple package arguments is not allowed'
-PackageNotInstalled='package in not installed'
-PackageTooMuch='too much packages match'
+PackageNotInstalled='package is not installed'
+PackageTooMuch='too many packages match'
 RequiredArgument='requires an argument'
 #ShouldNotDirectory='should not be a directory'
 SpecFailed='specfile generation failed'
@@ -36,7 +36,7 @@ WriteComments='write your comments below'
 
 UsageTitle="is a tool to rebuild an rpm file from the rpm database"
 UsageUsage='Usage'
-UsageAdditional='additional flags to be pass to the rpmbuild'
+UsageAdditional='additional flags to be passed to the rpmbuild'
 UsageBatch='batch mode (ask no questions)'
 UsageCapFs='use files posix capabilities from installed files'
 UsageCapDb='use files posix capabilities from rpm database'
@@ -71,7 +71,7 @@ UsageLicense='this program is distributed under GNU General Public License'
 
 UsagePluginChangeFiles="command to modify package's files"
 UsagePluginChangeSpecWhole='command to modify whole specfile'
-UsagePluginChangeSpec='command to modify appropriative part of the specfile'
+UsagePluginChangeSpec='command to modify appropriate part of the specfile'
 UsagePluginEditWhole='edit whole specfile'
-UsagePluginEdit='edit appropriative part of the specfile'
+UsagePluginEdit='edit appropriate part of the specfile'
 UsagePluginHelp='print help about "regular" options'
