--- a/src/Changelog
+++ b/src/Changelog
@@ -1,3 +1,7 @@
+* Fri Jul 20 2018 <gerbier@users.sourceforge.net> 2.12-1
+- apply patch from Bruce Jerrick
+- add new requires syntax with if ( redhat-rpm-config )
+
 * Sun Jun 10 2018 <gerbier@users.sourceforge.net> 2.11-3
 - Made minor grammatical fixes to English language translations (patch from beroset)
 
