--- a/src/Changelog
+++ b/src/Changelog
@@ -1,3 +1,6 @@
+* Wed Sep 12 2018 <gerbier@users.sourceforge.net> 2.13-1
+- can handle recommends / supplements rpm tags
+
 * Fri Jul 20 2018 <gerbier@users.sourceforge.net> 2.12-1
 - apply patch from Bruce Jerrick : Handle Requires(pre,post,preun,postun)
 - add new requires syntax with if ( redhat-rpm-config )
