add translations for optional tags code (GenRpmQf)

--- a/src/locale/en/rpmrebuild.lang
+++ b/src/locale/en/rpmrebuild.lang
@@ -20,11 +20,15 @@ PackageArgumentMissing='package argument missing'
 PackageMultiple='multiple package arguments is not allowed'
 PackageNotInstalled='package is not installed'
 PackageTooMuch='too many packages match'
+RemoveTagLine='remove tag line'
+RemoveTagWord='remove tag word'
+ReplaceTag='replace tag'
 RequiredArgument='requires an argument'
 #ShouldNotDirectory='should not be a directory'
 SpecFailed='specfile generation failed'
 TestFailed='install test failed'
 UnknownOperation='unknown operation'
+UnknownType='unknown type'
 UnrecognizeOption='unrecognized option'
 WantChangeEmail='Do you want to change your e-mail address'
 WantChangeRelease='Do you want to change release number'
