--- a/src/locale/fr_FR/rpmrebuild.lang
+++ b/src/locale/fr_FR/rpmrebuild.lang
@@ -20,11 +20,15 @@ PackageArgumentMissing="il manque le nom du package"
 PackageMultiple="un seul package à la fois"
 PackageNotInstalled="n'est pas installé"
 PackageTooMuch="plusieurs packages correspondent"
+RemoveTagLine='suppression (ligne) du tag'
+RemoveTagWord='suppression (mot) du tag'
+ReplaceTag='remplacement du tag'
 RequiredArgument="nécessite un argument"
 #ShouldNotDirectory="ne doit pas être un répertoire"
 SpecFailed="la génération du fichier specfile a échoué"
 TestFailed="le test d'installation a échoué"
 UnknownOperation="opération inconnue"
+UnknownType='type inconnu'
 UnrecognizeOption="option inconnue"
 WantChangeEmail="Voulez-vous modifier cette adresse mail"
 WantChangeRelease="Voulez-vous modifier le numéro de release"
