--- a/src/Changelog
+++ b/src/Changelog
@@ -1,3 +1,9 @@
+* Tue Dec 20 2022 <gerbier@users.sourceforge.net> 2.17
+- fix -r does not work (xujing)
+- fix spelling errors that could mislead users (xujing)
+- fix --comment-missing=n does not work (xujing)
+- fix --cap-from-fs does not work (xujing)
+
 * Sun Jan 17 2021 <gerbier@users.sourceforge.net> 2.16-1
 - fix bug if more than 10 args (thanks Dmitry V. Levin)
 - add signal trapping to clean directory
