--- a/src/Changelog
+++ b/src/Changelog
@@ -3,6 +3,8 @@
 - fix spelling errors that could mislead users (xujing)
 - fix --comment-missing=n does not work (xujing)
 - fix --cap-from-fs does not work (xujing)
+- all shell are bash
+- clean test x$var, use -z
 
 * Sun Jan 17 2021 <gerbier@users.sourceforge.net> 2.16-1
 - fix bug if more than 10 args (thanks Dmitry V. Levin)
