--- a/src/Changelog
+++ b/src/Changelog
@@ -6,6 +6,7 @@
 - all shell are bash
 - clean test x$var, use -z
 - change email to tutanota
+- change copyright year
 
 * Sun Jan 17 2021 <eric.gerbier@tutanota.com> 2.16-1
 - fix bug if more than 10 args (thanks Dmitry V. Levin)
