--- a/src/Changelog
+++ b/src/Changelog
@@ -1,4 +1,4 @@
-* Tue Dec 20 2022 <eric.gerbier@tutanota.com> 2.17
+* Thu Dec 29 2022 <eric.gerbier@tutanota.com> 2.17
 - fix -r does not work (xujing)
 - fix spelling errors that could mislead users (xujing)
 - fix --comment-missing=n does not work (xujing)
@@ -8,6 +8,7 @@
 - change email to tutanota
 - change copyright year
 - fix warnings from shellcheck
+- add unitary tests
 
 * Sun Jan 17 2021 <eric.gerbier@tutanota.com> 2.16-1
 - fix bug if more than 10 args (thanks Dmitry V. Levin)
