--- a/src/Changelog
+++ b/src/Changelog
@@ -11,6 +11,7 @@
 - add unitary tests
 - if batch mode, do not edit any spec part
 - spec_only : display spec name if successfull
+- echo+read in one line with read -p
 
 * Sun Jan 17 2021 <eric.gerbier@tutanota.com> 2.16-1
 - fix bug if more than 10 args (thanks Dmitry V. Levin)
