--- a/src/Changelog
+++ b/src/Changelog
@@ -15,6 +15,7 @@
 - add new plugin exclude_file to exclude files from spec
 - split tests in t directory
 - bugfix in nodoc plugin
+- rename internal variable with RPMREBUILD_ prefix
 
 * Sun Jan 17 2021 <eric.gerbier@tutanota.com> 2.16-1
 - fix bug if more than 10 args (thanks Dmitry V. Levin)
