--- a/src/Changelog
+++ b/src/Changelog
@@ -1,4 +1,4 @@
-* Thu Jan 03 2023 <eric.gerbier@tutanota.com> 2.17
+* Tue Jan 10 2023 <eric.gerbier@tutanota.com> 2.17
 - fix -r does not work (xujing)
 - fix spelling errors that could mislead users (xujing)
 - fix --comment-missing=n does not work (xujing)
@@ -7,6 +7,7 @@
 - clean test x$var, use -z
 - change email to tutanota
 - change copyright year
+- change gpg key
 - fix warnings from shellcheck
 - add unitary tests for plugins and options
 - if batch mode, do not edit any spec part
