fix -k may not keep uid or gid (xujing)

--- a/src/Changelog
+++ b/src/Changelog
@@ -1,6 +1,7 @@
 * Sat Feb 03 2023 <eric.gerbier@tutanota.com> 2.18
 - fix --cap-frpm-fs is not as expected when use libcap-2.32 (xujing)
 - reset %defattr when users want to keep files permission, uid and gid (xujing)
+- fix -k may not keep uid or gid (xujing)
 
 * Tue Jan 10 2023 <eric.gerbier@tutanota.com> 2.17
 - fix -r does not work (xujing)
