Set the directory mode to - instead of omit (xujing)

--- a/src/Changelog
+++ b/src/Changelog
@@ -1,3 +1,6 @@
+* Sun Feb 05 2023 <eric.gerbier@tutanota.com> 2.19
+- Set the directory mode to '-' instead of omit (xujing)
+
 * Sun Feb 05 2023 <eric.gerbier@tutanota.com> 2.18
 - fix --cap-from-fs is not as expected when use libcap-2.32 (xujing)
 - reset %defattr when users want to keep files permission, uid and gid (xujing)
